# rcj_2026_pico

./: CMakeLists.txt
lib/: CMakeLists.txt  config.hpp
lib/BLDC/: BLDC.cpp  BLDC.hpp  CMakeLists.txt
lib/encoder/: CMakeLists.txt  encoder.cpp  encoder.hpp
lib/gyro/: CMakeLists.txt  gyro.cpp
lib/pico2/: CMakeLists.txt  pico2.cpp  pico2.hpp  pio_spi.c  pio_spi.h  spi.pio
lib/rp2350/: CMakeLists.txt  picoPioUart.pio  rp2350.cpp  rp2350.hpp  spi_slave.pio
main/: CMakeLists.txt  main.cpp
